# wp1-fim-identifiability

./: .gitignore  CHANGELOG.md  CITATION.bib  CITATION.cff  LICENSE  LICENSE-paper  README.md  conftest.py  pyproject.toml
.github/workflows/: test.yml
data/raw/: README.md
paper/: WP1_FIM_methods_note.md  WP1_FIM_methods_note.tex
results/: README.md  alpha_refit_summary_cdf3333_2026-05-03.json  cohort_mcmc_summary_e3b9841_2026-05-03.json  cross_cohort_pa_vs_pe_summary_00c59eb_2026-05-03.json  decision_comparison_summary_e3b9841_2026-05-03.json  fim_3pop_schedule_summary_4e9e098_2026-05-03.json  fim_3pop_summary_24880c4_2026-05-02.json  fim_schedule_summary_027f351_2026-05-02.json  fim_summary_4d19f44_2026-05-02.json  hierarchical_bruchovsky_summary_c8558cf_2026-05-13.json  hierarchical_shaw_summary_c5564e1_2026-05-13.json  mcmc_synthetic_summary_c57ffae_2026-05-02.json  multimodal_fim_summary_7bbeb19_2026-05-13.json  nuts_real_patient_p001_fim_prior_d277a19_2026-05-13.json  nuts_real_patient_p001_hier_prior_d4782d9_2026-05-13.json  nuts_real_patient_p001_hier_prior_hardguard_d277a19_2026-05-13.json  nuts_real_patient_p001_init_canonical_27e3c9f_2026-05-13.json  posterior_aware_summary_e5ca40c_2026-05-02.json  real_cohort_pa_vs_pe_summary_9a37923_2026-05-03.json  regime_scan_2d_summary_e3b9841_2026-05-03.json  regime_scan_summary_4e9e098_2026-05-03.json
scripts/: reproduce_all_figures.sh
src/cunningham2020/: __init__.py  ocp.py
src/experiments/: 03_zhang2017_reproduction.py  04_fim_identifiability.py  05_fim_schedule_comparison.py  06_cross_tribe_comparison.py  08_fim_3pop_zhang.py  09_posterior_aware_policy.py  10_mcmc_synthetic_psa.py  12_fim_3pop_schedule_comparison.py  13_regime_scan_policy_robustness.py  14_cohort_mcmc_synthetic.py  15_regime_scan_2d.py  16_posterior_aware_vs_point_estimate.py  17_master_figure_wp1.py  19_real_cohort_pa_vs_pe.py  20_cross_cohort_pa_vs_pe.py  21_alpha_refit_zhang_ttp.py  22_hierarchical_bruchovsky.py  23_nuts_real_patient.py  24_multimodal_fim.py
src/identifiability/: __init__.py  fim.py
src/policies/: __init__.py  at50.py  base.py  cohort_runner.py  mtd.py  no_treatment.py
src/realdata/: __init__.py  bruchovsky.py  hierarchical.py  jax_simulator.py  per_patient_hmc.py  per_patient_mcmc.py
src/simulators/: __init__.py  lv_2pop_multdeath.py  lv_3pop_kshift.py  psa_dynamics.py
src/zhang2017/: __init__.py  runner.py
tests/: test_cunningham2020.py  test_fim.py  test_jax_simulator.py  test_lv_2pop_multdeath.py  test_lv_3pop_kshift.py  test_policies.py  test_psa_dynamics.py  test_realdata.py  test_zhang2017.py
