[project]
name = "adaptive-therapy-research"
version = "0.1.0"
description = "Adaptive cancer therapy via evolutionary dynamics, optimal control, and reinforcement learning"
authors = [{name = "Aleksei", email = "aplab.official@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

# Phase 2 (kickoff 2026-05-02 session 14): core scientific stack uncommented.
# Phase 3+ deps still commented; uncomment when needed.
dependencies = [
    # Core scientific stack — Phase 2 onwards
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "pandas>=2.2",

    # Optimal control — Phase 2 Stage 2.5 onwards (Cunningham 2020 OCP)
    "casadi>=3.7",  # bundles ipopt for nonlinear optimization

    # RL framework — needed for Phase 3
    # "gymnasium>=0.29",
    # "stable-baselines3>=2.3",
    # "torch>=2.3",

    # Bayesian inference — needed for Phase 3 §3.3
    # "numpyro>=0.15",  # or pymc

    # Experiment management — needed for Phase 3
    # "hydra-core>=1.3",
    # "optuna>=3.6",
    # "wandb>=0.17",   # or comet/mlflow/tensorboard — pick later
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
docs = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "slow: tests that take >5s (skip with -m 'not slow')",
    "integration: tests requiring full pipeline",
]

[tool.mypy]
python_version = "3.11"
strict = false  # turn on gradually
warn_return_any = true
warn_unused_ignores = true
