[project]
name = "wp1-fim-identifiability"
version = "0.1.0"
description = "Companion code + data for the WP1 arXiv preprint on FIM identifiability of Lotka-Volterra models in adaptive cancer therapy"
authors = [{name = "Aleksei Prikhodko", email = "aplab.official@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core scientific stack
    "numpy>=1.26",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "pandas>=2.2",

    # Optimal control (Cunningham 2020 reproduction, src/cunningham2020/)
    "casadi>=3.7",  # bundles ipopt for nonlinear optimization

    # Bayesian inference + JAX simulator (§5, §6.11 hierarchical fit)
    "jax>=0.4",
    "jaxlib>=0.4",
    "diffrax>=0.6",
    "numpyro>=0.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
docs = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
    "slow: tests that take >5s (skip with -m 'not slow')",
    "integration: tests requiring full pipeline",
]

[tool.mypy]
python_version = "3.11"
strict = false  # turn on gradually
warn_return_any = true
warn_unused_ignores = true
